[gd_scene load_steps=5 format=3 uid="uid://4yovkvj6nlx5"]

[ext_resource type="Script" uid="uid://bj1xnjle7d7fq" path="res://scripts/title_screen.gd" id="1_ak2if"]
[ext_resource type="Theme" uid="uid://c41vwp4s5gqo2" path="res://ui/title_screen_theme.tres" id="1_v6p8y"]

[sub_resource type="LabelSettings" id="LabelSettings_1s85s"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_v6p8y"]
font_size = 128

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 1.0
offset_right = 3.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ak2if")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundColor" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="GMTK2025Label" type="Label" parent="."]
layout_mode = 2
offset_left = 32.0
offset_top = 32.0
offset_right = 286.0
offset_bottom = 66.0
size_flags_horizontal = 0
text = "GMTK Game Jam 2025"
label_settings = SubResource("LabelSettings_1s85s")

[node name="Credits" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = 44.0
offset_top = 625.0
offset_right = 557.0
offset_bottom = 1046.0
size_flags_horizontal = 0
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 26
bbcode_enabled = true
text = "A game made with love by:

[b]nepp[/b]: art, voice acting
[b]nameless[/b]: writing, art, voice acting
[b]rommygnacia[/b]: music, voice acting
[b]danik[/b]: music, audio, code, voice acting
[b]robin[/b]: audio
[b]hojaverde[/b]: shaders, voice acting
[b]jiloombee[/b]: code"
vertical_alignment = 2

[node name="GameTitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -464.0
offset_top = -164.0
offset_right = 464.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 0
text = "Out of the Loop"
label_settings = SubResource("LabelSettings_v6p8y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -332.0
offset_top = -356.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_v6p8y")
theme_override_constants/separation = 16
alignment = 2

[node name="PlayButton" type="Button" parent="MainButtonsContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme = ExtResource("1_v6p8y")
text = "Play"

[node name="ScreenButton" type="Button" parent="MainButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_v6p8y")
text = "Fullscreen"

[node name="ExitButton" type="Button" parent="MainButtonsContainer"]
layout_mode = 2
theme = ExtResource("1_v6p8y")
text = "Exit"

[connection signal="pressed" from="MainButtonsContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainButtonsContainer/ScreenButton" to="." method="_on_fullscreen_button_pressed"]
[connection signal="pressed" from="MainButtonsContainer/ExitButton" to="." method="_on_exit_button_pressed"]
